fix siliconflow api key showing

--- a/app/src/main/res/xml/fragment_preferences.xml
+++ b/app/src/main/res/xml/fragment_preferences.xml
@@ -118,11 +118,11 @@
             app:dialogTitle="@string/dictate_settings_api_key_title"
             app:iconSpaceReserved="false"/>
 
-        <EditTextPreference
+        <androidx.preference.EditTextPreference
             android:key="net.devemperor.dictate.siliconflow_api_key"
-            android:summary="No SiliconFlow API key set"
-            android:title="SiliconFlow API Key 🔑"
-            app:dialogTitle="SiliconFlow API Key"
+            android:summary="@string/dictate_no_api_key"
+            android:title="@string/dictate_settings_silicon_api_key_title"
+            app:dialogTitle="@string/dictate_settings_silicon_api_key_title"
             app:iconSpaceReserved="false"
             app:negativeButtonText="@string/dictate_cancel"
             app:positiveButtonText="@string/dictate_okay" />
