--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,13 +2,15 @@
 <resources>
     <style name="Theme.Dictate" parent="Theme.Material3.Dark">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/dictate_blue</item>
-        <item name="colorPrimaryVariant">@color/dictate_blue</item>
+        <item name="colorPrimary">@color/dictate_blue_dark</item>
+        <item name="colorPrimaryVariant">@color/dictate_blue_dark</item>
         <item name="colorOnPrimary">@color/dictate_black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/dictate_blue</item>
-        <item name="colorSecondaryVariant">@color/dictate_blue</item>
+        <item name="colorSecondary">@color/dictate_blue_dark</item>
+        <item name="colorSecondaryVariant">@color/dictate_blue_dark</item>
         <item name="colorOnSecondary">@color/dictate_black</item>
+        <!-- Background color -->
+        <item name="colorOnBackground">@color/dictate_black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
 
