--- a/app/src/main/res/layout/activity_dictate_keyboard_view.xml
+++ b/app/src/main/res/layout/activity_dictate_keyboard_view.xml
@@ -5,7 +5,9 @@
     android:id="@+id/dictate_keyboard_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:keepScreenOn="true">
+    android:keepScreenOn="true"
+    style="@style/AutoTheme"
+    >
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/settings_btn"
