--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <style name="AutoTheme" parent="Theme.AppCompat">
         <item name="android:textColor">?attr/colorPrimary</item>
         <item name="android:windowBackground">?attr/colorOnBackground</item>
+        <item name="android:background">?attr/colorOnBackground</item>
         <item name="android:iconTint">?attr/colorPrimary</item>
     </style>
 </resources>
