--- a/app/src/main/res/xml/fragment_preferences.xml
+++ b/app/src/main/res/xml/fragment_preferences.xml
@@ -141,7 +141,7 @@
             app:iconSpaceReserved="false"
             app:entries="@array/dictate_transcription_models"
             app:entryValues="@array/dictate_transcription_models_values"
-            app:defaultValue="gpt-4o-mini-transcribe"
+            app:defaultValue="FunAudioLLM/SenseVoiceSmall"
             app:summary="%s"/>
 
         <androidx.preference.Preference
