--- a/app/src/main/res/xml/fragment_preferences.xml
+++ b/app/src/main/res/xml/fragment_preferences.xml
@@ -63,6 +63,20 @@
             app:iconSpaceReserved="false"/>
 
         <androidx.preference.SwitchPreference
+            android:key="net.devemperor.dictate.remove_punctuation"
+            android:title="@string/dictate_settings_remove_punctuation_title"
+            android:summary="@string/dictate_settings_remove_punctuation_summary"
+            android:defaultValue="false"
+            app:iconSpaceReserved="false"/>
+
+        <androidx.preference.SwitchPreference
+            android:key="net.devemperor.dictate.remove_period"
+            android:title="@string/dictate_settings_remove_period_title"
+            android:summary="@string/dictate_settings_remove_period_summary"
+            android:defaultValue="false"
+            app:iconSpaceReserved="false"/>
+
+        <androidx.preference.SwitchPreference
             android:key="net.devemperor.dictate.instant_output"
             android:title="@string/dictate_settings_instant_output_title"
             android:summary="@string/dictate_settings_instant_output_summary"
